--- a/NewsApp/Info.plist
+++ b/NewsApp/Info.plist
@@ -25,7 +25,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>HomePage</string>
+					<string>NewsStoryboard</string>
 				</dict>
 			</array>
 		</dict>
